--- a/style.css
+++ b/style.css
@@ -2,29 +2,25 @@
     box-sizing: border-box;
     margin: 0px;
 }
-
 body {
     background-color: #465253;
 }
-
 p {
     font-size: 20px;
     color: #9E9C9C;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     align-self: end;
 }
-
 header {
     background-color: #5b696b;
     padding: 10px 0;
 }
-
 .search-form {
     position: relative;
-    width: 300px;
+    width: 100%;
+    max-width: 300px;
     margin: 0 auto;
 }
-
 .search-input {
     width: 100%;
     height: 42px;
@@ -35,7 +31,6 @@ header {
     background: #F9F0DA;
     color: #9E9C9C;
 }
-
 .reset-button {
     display: none;
     position: absolute;
@@ -48,7 +43,6 @@ header {
     cursor: pointer;
     color: #9E9C9C;
 }
-
 .search-button {
     position: absolute;
     top: 0;
@@ -60,48 +54,41 @@ header {
     border-radius: 0 5px 5px 0;
     cursor: pointer;
 }
-
 .search-button:before {
     content: '>';
     font-size: 16px;
     color: #F9F0DA;
 }
-
 .galleryContainer {
-    width: 1440px;
+    width: 100%;
+    max-width: 1440px;
     margin: auto;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     gap: 25px;
     justify-items: center;
     align-items: center;
     padding: 25px 0;
 }
-
 .movieCard {
-    width: 350px;
+    width: 100%;
+    max-width: 350px;
     height: 530px;
     background-color: rgba(158, 156, 156, 0.05);
     text-align: center;
     display: grid;
     justify-content: center;
     align-items: center;
-    -webkit-box-shadow: 0px 0px 29px 28px rgba(34, 60, 80, 0.28);
-    -moz-box-shadow: 0px 0px 29px 28px rgba(34, 60, 80, 0.28);
     box-shadow: 0px 0px 29px 28px rgba(34, 60, 80, 0.28);
     border-radius: 5px;
 }
-
 .gallery-img {
     object-fit: cover;
     border-radius: 5px;
     align-self: end;
     justify-self: center;
-    -webkit-box-shadow: 0px 0px 61px 20px rgba(23, 41, 54, 0.73);
-    -moz-box-shadow: 0px 0px 61px 20px rgba(23, 41, 54, 0.73);
     box-shadow: 0px 0px 61px 20px rgba(23, 41, 54, 0.73);
 }
-
 .movieCard a {
     text-decoration: none;
     color: #9E9C9C;
@@ -110,7 +97,6 @@ header {
     align-self: end;
     margin-bottom: 10px;
 }
-
 .error-massage {
     justify-self: center;
     font-size: 32px;
@@ -118,7 +104,6 @@ header {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     grid-column: 1/5;
 }
-
 .footer-container {
     margin: auto;
     max-width: 1440px;
@@ -129,7 +114,6 @@ header {
     flex-direction: row;
     justify-content: space-between;
 }
-
 .footer-container a {
     text-decoration: none;
     float: right;
@@ -139,14 +123,12 @@ header {
     padding: 15px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
-    /*Нижнее подчёркивание при наведении*/
     background-image: linear-gradient(currentColor, currentColor);
     background-position: 0% 100%;
     background-repeat: no-repeat;
     background-size: 0% 2px;
     transition: background-size 2s;
 }
-
 .rss a,
 .rss {
     width: 121px;
@@ -154,4 +136,36 @@ header {
     background-image: url("./img/rss.svg");
     background-size: contain;
     background-repeat: no-repeat;
+}
+
+@media (max-width: 768px) {
+    p {
+        font-size: 18px;
+    }
+    .search-form {
+        width: 90%;
+    }
+    .movieCard {
+        height: auto;
+    }
+    .footer-container {
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (max-width: 480px) {
+    p {
+        font-size: 16px;
+    }
+    .search-input {
+        height: 36px;
+    }
+    .search-button, .reset-button {
+        width: 36px;
+        height: 36px;
+    }
+    .galleryContainer {
+        padding: 15px 0;
+    }
 }
